--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
