--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
