--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
