--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "next": "14.2.3",
+    "fs": "^0.0.1-security",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "pg": "^8.12.0",
     "react": "^18",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
